--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <h1>Cabecera</h1>
     <h1>Título</h1>
     <p>Add paragraph</p>
   </body>
