add error in master

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,6 @@
     <p>Cabecereando</p>
     <h1>Título</h1>
     <p>Add paragraph</p>
-    <p>Others paragraph</p>
+    <p>error starting Others paragraph</p>
   </body>
 </html>
