--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Cabecera</h1>
+    <p>Trabajando en la cabecera</p>
     <p>Cabecereando</p>
     <h1>Título</h1>
     <p>Add paragraph</p>
