--- a/blogpost.html
+++ b/blogpost.html
@@ -12,5 +12,6 @@
     <h1>Título</h1>
     <p>Add paragraph</p>
     <p>error starting Others paragraph</p>
+    <pAgregando footer></>
   </body>
 </html>
